fix(notification): add max-width to prevent alert overflow on ultrawide screens

--- a/src/api/Notifications/styles.css
+++ b/src/api/Notifications/styles.css
@@ -16,6 +16,7 @@
     z-index: 2147483647;
     right: 1rem;
     width: 25vw;
+    max-width: 500px;
     min-height: 10vh;
 }
 
